--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
     "babel-register": "^6.23.0",
     "browser-sync": "^2.18.8",
     "css-loader": "^0.26.2",
+    "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.1.0",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
     "supports-color": "^3.2.3",
-    "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.2.1",
+    "vue-loader": "^11.3.3",
+    "vue-template-compiler": "^2.2.6",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "vue": "^2.2.1"
+    "axios": "^0.15.3",
+    "vue": "^2.2.6",
+    "vue-router": "^2.3.0"
   }
 }
