--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config webpack/config/webpack.dev.babel.js",
-    "serve": "babel-node webpack/browser-sync.js"
+    "serve": "babel-node webpack/server.js"
   },
   "author": "JMXX",
   "license": "ISC",
@@ -16,11 +16,14 @@
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.23.0",
     "browser-sync": "^2.18.8",
+    "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.2",
     "eventsource-polyfill": "^0.9.6",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.28.0",
+    "opn": "^4.0.2",
     "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
